# ChangeLog for xfce-extra/xfce4-dict
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-dict/ChangeLog,v 1.33 2009/02/09 19:58:37 angelos Exp $

  09 Feb 2009; Christoph Mende <angelos@gentoo.org>
  -xfce4-dict-0.3.0.ebuild, -xfce4-dict-0.5.1.ebuild:
  Removed old

  04 Feb 2009; Raúl Porcel <armin76@gentoo.org> xfce4-dict-0.5.2.ebuild:
  arm/ia64/sparc stable wrt #254440

  25 Jan 2009; Tobias Klausmann <klausman@gentoo.org>
  xfce4-dict-0.5.2.ebuild:
  Stable on alpha, bug #254440

  21 Jan 2009; Jeroen Roovers <jer@gentoo.org> xfce4-dict-0.5.2.ebuild:
  Stable for HPPA (bug #254440).

  18 Jan 2009; Markus Meier <maekke@gentoo.org> xfce4-dict-0.5.2.ebuild:
  x86 stable, bug #254440

  13 Jan 2009; Brent Baude <ranger@gentoo.org> xfce4-dict-0.5.2.ebuild:
  Marking xfce4-dict-0.5.2 ppc64 and ppc for bug 254440

  12 Jan 2009; Jeremy Olexa <darkside@gentoo.org> xfce4-dict-0.5.2.ebuild:
  amd64 stable, bug 254440

  22 Dec 2008; Christoph Mende <angelos@gentoo.org>
  -xfce4-dict-0.4.1.ebuild, -xfce4-dict-0.5.0.ebuild:
  Removed old

  05 Dec 2008; Christoph Mende <angelos@gentoo.org> xfce4-dict-0.3.0.ebuild,
  xfce4-dict-0.4.1.ebuild, xfce4-dict-0.5.0.ebuild, xfce4-dict-0.5.1.ebuild,
  xfce4-dict-0.5.2.ebuild:
  Added an elog to let the user know we need aspell/ispell/enchant for spell
  checking

*xfce4-dict-0.5.2 (05 Dec 2008)

  05 Dec 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-dict-0.5.2.ebuild:
  Version bump

*xfce4-dict-0.5.1 (23 Nov 2008)

  23 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-dict-0.5.1.ebuild:
  Version bump

*xfce4-dict-0.5.0 (10 Nov 2008)

  10 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-dict-0.5.0.ebuild:
  Version bump

*xfce4-dict-0.4.1 (06 Nov 2008)

  06 Nov 2008; Christoph Mende <angelos@gentoo.org>
  -xfce4-dict-0.2.1.ebuild, +xfce4-dict-0.4.1.ebuild:
  Version bump and remove old
