@@ -1,6 +1,12 @@
 # ChangeLog for xfce-extra/xfce4-dict
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-dict/ChangeLog,v 1.33 2009/02/09 19:58:37 angelos Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-extra/xfce4-dict/ChangeLog,v 1.34 2009/05/18 20:53:41 angelos Exp $
+
+*xfce4-dict-0.5.3 (18 May 2009)
+
+  18 May 2009; Christoph Mende <angelos@gentoo.org>
+  +xfce4-dict-0.5.3.ebuild:
+  Version bump
 
   09 Feb 2009; Christoph Mende <angelos@gentoo.org>
   -xfce4-dict-0.3.0.ebuild, -xfce4-dict-0.5.1.ebuild:
